src/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: '';
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* END OF RESET */

html,
body {
  font-family: Arial, Helvetica, sans-serif;
}

/* MAIN */

.main-container {
  background-color: #1f1f1f;
  color: white;
  height: calc(100vh - 3rem);
  text-align: center;
  padding-top: 3rem;
}

.main-title {
  font-weight: bold;
  font-size: 1.6rem;
}

/* MOVIE CONTAINER */

.movie-container {
  display: flex;
  overflow: hidden;
  flex-wrap: wrap;
}

.movie-container-alt-text {
  font-weight: bold;
  font-size: 0.9rem;
}

/* MOVIE CARD */

.movie-detail-wrapper {
  height: 230px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.movie-detail-image {
  height: 100%;
  width: 150px;
  margin: 0 1rem;
}

.movie-detail {
  height: 100%;
  width: 150px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: 0 1rem;
  background-color: transparent;
}

.nomination {
  cursor: pointer;
}

.movie-detail-button {
  margin-top: 0.8rem;
  border-radius: 6px;
  background-color: #c43256;
  color: white;
  font-size: 0.9rem;
  font-weight: bold;
  border: none;
  width: 150px;
  padding: 1rem 0;
}

.movie-detail-nominated {
  margin-top: 0.8rem;
  color: white;
  font-size: 0.9rem;
  font-weight: bold;
  width: 150px;
  padding: 1.8rem 0;
  margin: 0 auto;
}

/* SEARCH BAR */

.search-form {
  margin: 3rem 0;
  display: flex;
  align-items: center;
  justify-content: center;
}

.search-form-icon {
  border: none;
  background-color: transparent;
  margin: 0;
  padding: 0;
}

.fa.fa-search {
  color: #1f1f1f;
  background-color: white;
  padding: 0.35rem 1rem;
  font-size: 1.2rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-top-left-radius: 24px;
  border-bottom-left-radius: 24px;
}

.search-form-bar {
  border: transparent;
  padding: 0.5rem 2rem 0.5rem 0.5rem;
  border-top-right-radius: 24px;
  border-bottom-right-radius: 24px;
}

@media screen and (min-width: 600px) {
  .search-form-bar {
    padding-right: 10rem;
  }
}

/* FOOTER */

.footer-nominations-container {
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: 60px;
  background-color: white;
  display: flex;
  justify-content: center;
  align-items: center;
}

.footer-nominations {
  display: flex;
}

.footer-nominations-display {
  font-weight: bold;
  font-size: 1.6rem;
  margin-right: 2rem;
}

.footer-nominations-button-remove {
  height: 230px;
  width: 150px;
  margin: 0 1rem;
  background-color: transparent;
  border: none;
  font-size: 0.9rem;
  font-weight: bold;
}

.footer-nominations-button-remove:hover {
  /* background-color: #7d1c34; */
}

.nominations-footer-mobile {
  z-index: 1000;
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  height: 100vh;
  padding: 2rem;
  background-color: white;
}

.nominations-footer-mobile-display-wrapper {
  text-align: center;
}

.nominations-footer-mobile-display-note {
  font-size: 0.7rem;
  margin-bottom: 1rem;
}

.nominations-footer-mobile-display {
  font-weight: bold;
  font-size: 1.6rem;
  margin-bottom: 1rem;
}

.nominations-footer-mobile-nominations {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: space-between;
  height: 70vh;
}

.mobile-wrapper {
  height: 150px;
  width: 115px;
  margin-bottom: 1rem;
}

.mobile-detail {
}

.mobile-image {
  height: 100%;
  max-width: 107px;
}

.mobile-button {
  height: 150px;
  width: 115px;
  border: none;
  background-color: white;
  font-size: 0.9rem;
  font-weight: bold;
}

@media screen and (min-width: 600px) {
  .footer-nominations-container {
    height: 300px;
  }
}

@media screen and (max-width: 600px) {
  .footer-nominations {
    display: none;
  }
}

